--- a/src/components/Panel/style.css
+++ b/src/components/Panel/style.css
@@ -14,5 +14,5 @@
   background-color: #f3f3f3;
   border-radius: 3px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.13);
-  padding: 1.25rem;
+  padding: 1.25rem 1.25rem 0;
 }
